--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": "true",
   "description": "Portfolio",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
